// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-variable.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  var bar = 1;
  delete bar;}

=====================================output=====================================
function foo() {
  var bar = 1;
  delete bar;
}

================================================================================
`;

exports[`eval-arguments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function myfunc() {
  arguments = arguments;
}

=====================================output=====================================
function myfunc() {
  arguments = arguments;
}

================================================================================
`;

exports[`eval-arguments-binding.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function myfunc() {
  var arguments;
}

=====================================output=====================================
function myfunc() {
  var arguments;
}

================================================================================
`;

exports[`function.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: function bar() {}

=====================================output=====================================
foo: function bar() {}

================================================================================
`;
